add: skills article change: class "name" css

--- a/index.html
+++ b/index.html
@@ -169,11 +169,43 @@
             </div>
             <div class="container">
                 <div class="row container d-flex justify-content-center">
-                    <div class="col-md-3 content mr-md-5">
-                        a
+                    <div class="col-md-4 content mr-md-5 ml-md-5">
+                        <div class="p-md-3">
+                            <h4 class="name mt-md-3">Programming languages</h4>
+                            <ul class="pl-md-4">
+                                <li>JavaScript</li>
+                                <li>HTML, CSS</li>
+                                <li>Java</li>
+                            </ul>
+                            <h4 class="name mt-md-2">Frameworks & platforms</h4>
+                            <ul class="pl-md-4">
+                                <li>Spring Boot / IONIC 3</li>
+                                <li>jQuery / Bootstrap</li>
+                                <li>Spring WebAPI / RestfulAPI / JSON, XML</li>
+                                <li>Javascript SDK: Google Map</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-md-3 content mr-md-5"></div>
-                    <div class="col-md-3 content">c</div>
+                    <div class="col-md-4 content">
+                        <div class="p-md-3">
+                            <h2 class="name mt-md-3">Database</h2>
+                            <ul class="pl-md-4">
+                                <li>Microsoft SQL</li>
+                                <li>MySQL</li>
+                            </ul>
+                            <h2 class="name mt-md-2">Version Control</h2>
+                            <ul class="pl-md-4">
+                                <li>Git (Git Lab & Github)</li>
+                                <li>SVN (TortoiseSVN)</li>
+                            </ul>
+                            <h2 class="name mt-md-2">IDE</h2>
+                            <ul class="pl-md-4">
+                                <li>Atom</li>
+                                <li>Visual Studio 2012 & Visual Studio Code</li>
+                                <li>Eclipse & Netbeans</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </article>
