change some information

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 <li>Spring Boot / IONIC 3</li>
                                 <li>jQuery / Bootstrap</li>
                                 <li>Spring WebAPI / RestfulAPI / JSON, XML</li>
-                                <li>Javascript SDK: Google Map</li>
+                                <li>Javascript SDK: Facebook</li>
                             </ul>
                         </div>
                     </div>
