remove unused css and js

--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link href="./plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="./plugins/OwlCarousel2-2.2.1/owl.carousel.css">
-    <link rel="stylesheet" type="text/css" href="./plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
-    <link rel="stylesheet" type="text/css" href="./plugins/OwlCarousel2-2.2.1/animate.css">
 
     <!-- COLORLIB -->
     <link rel="stylesheet" type="text/css" href="./styles/main_styles.css">
@@ -222,7 +219,7 @@
             <div class="home_slider_container">
 
                 <!-- Slider Item -->
-                <div class="owl-item home_slider_item">
+                <div class="home_slider_item">
                     <img class="center-fit" src="./images/cert-java.jpg" alt="">
                 </div>
 
@@ -323,8 +320,6 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="./plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-    <script src="./plugins/easing/easing.js"></script>
 
     <!-- COLORLIB -->
     <script src="./js/custom.js"></script>
