--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link href="./plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- COLORLIB -->
     <link rel="stylesheet" type="text/css" href="./styles/main_styles.css">
     <link rel="stylesheet" type="text/css" href="./styles/responsive.css">
-    <!-- END COLORLIB -->
 </head>
 
 <body>
@@ -168,7 +165,7 @@
                 <div class="row container d-flex justify-content-center">
                     <div class="col-md-4 content mr-md-5 ml-md-5">
                         <div class="p-md-3">
-                            <h4 class="name mt-md-3">Programming languages</h4>
+                            <h4 class="name pt-md-3">Programming languages</h4>
                             <ul class="pl-md-4">
                                 <li>JavaScript</li>
                                 <li>HTML, CSS</li>
@@ -240,7 +237,7 @@
     					11.042,18.219 " />
                     </svg>
                 </div>
-
+                <span class="home_slider_nav item-count">1/7</span>
                 <!-- Home Slider Nav - Next -->
                 <div class="home_slider_nav home_slider_next">
                     <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -274,19 +271,6 @@
     <footer class="copyright">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 order-lg-1 order-2  ">
-                    <div class="copyright_content d-flex flex-row align-items-center">
-                        <div>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-                            is made with
-                            <i class="fa fa-heart-o" aria-hidden="true"></i> by
-                            <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </div>
-                    </div>
-                </div>
                 <div class="col-lg-9 order-lg-2 order-1">
                     <div class="footer_nav_container d-flex flex-row align-items-center justify-content-lg-end">
                         <div class="footer_nav">
@@ -320,10 +304,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
-    <!-- COLORLIB -->
     <script src="./js/custom.js"></script>
-    <!-- END COLORLIB -->
 </body>
 
 </html>
