add animate for images

--- a/index.html
+++ b/index.html
@@ -218,6 +218,12 @@
                 <!-- Slider Item -->
                 <div class="home_slider_item">
                     <img class="center-fit" src="./images/cert-java.jpg" alt="">
+                    <img class="center-fit" src="./images/cert-html.jpg" alt="" style="display: none">
+                    <img class="center-fit" src="./images/cert-css.jpg" alt="" style="display: none">
+                    <img class="center-fit" src="./images/cert-js.jpg" alt="" style="display: none">
+                    <img class="center-fit" src="./images/cert-jquery.jpg" alt="" style="display: none">
+                    <img class="center-fit" src="./images/cert-php.jpg" alt="" style="display: none">
+                    <img class="center-fit" src="./images/cert-sql.jpg" alt="" style="display: none">
                 </div>
 
                 <!-- Home Slider Nav - Prev -->
@@ -238,6 +244,7 @@
                     </svg>
                 </div>
                 <span class="home_slider_nav item-count">1/7</span>
+
                 <!-- Home Slider Nav - Next -->
                 <div class="home_slider_nav home_slider_next">
                     <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
